<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.rajdeep.homework1.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/inputAmt"
        android:hint="@string/InputAmount"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="50dp"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="47dp">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="106dp"
            android:id="@+id/inputCurrency">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/INR"
                android:text="@string/INR"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/AUD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/AUD"
                tools:text="@string/AUD"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/CUD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/CAD"
                tools:text="@string/CUD"
                android:layout_weight="1" />
        </RadioGroup>
        <TextView
            android:text="@string/ConvertTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/textView2" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/outputCurrency">

            <RadioButton
                android:text="@string/GBP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:id="@+id/GBP"
                tools:text="@string/GBP"
                android:layout_weight="1" />

            <RadioButton
                android:text="@string/USD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/USD"
                android:layout_weight="1" />
        </RadioGroup>


        <Button
            android:text="@string/Convert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/buttonConvert" />

        <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/outputAmt"
            tools:text="@string/ConvertedVal" />

        <Button
            android:text="@string/Clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:id="@+id/clear"
            tools:text="@string/Clear"
            android:onClick="clearFunction"/>
    </LinearLayout>
</RelativeLayout>
